src/3rdparty/webkit/WebCore/platform/qt/PopupMenuQt.cpp
@@ -1,6 +1,7 @@
 /*
  * This file is part of the popup menu implementation for <select> elements in WebCore.
  *
+ * Copyright (C) 2009 Girish Ramakrishnan <girish@forwardbias.in>
  * Copyright (C) 2008 Nokia Corporation and/or its subsidiary(-ies)
  * Copyright (C) 2006 Apple Computer, Inc.
  * Copyright (C) 2006 Michael Emmel mike.emmel@gmail.com 
@@ -35,6 +36,9 @@
 
 #include <QAction>
 #include <QDebug>
+#include <QGraphicsProxyWidget>
+#include <QGraphicsScene>
+#include <QGraphicsView>
 #include <QListWidget>
 #include <QListWidgetItem>
 #include <QMenu>
@@ -46,6 +50,7 @@ namespace WebCore {
 
 PopupMenu::PopupMenu(PopupMenuClient* client)
     : m_popupClient(client)
+    , m_proxy(0)
 {
     m_popup = new QWebPopup(client);
 }
@@ -53,6 +58,7 @@ PopupMenu::PopupMenu(PopupMenuClient* client)
 PopupMenu::~PopupMenu()
 {
     delete m_popup;
+    delete m_proxy;
 }
 
 void PopupMenu::clear()
@@ -92,8 +98,19 @@ void PopupMenu::show(const IntRect& r, FrameView* v, int index)
     rect.moveTopLeft(v->contentsToWindow(r.topLeft()));
     rect.setHeight(m_popup->sizeHint().height());
 
-    m_popup->setParent(client->ownerWidget());
-    m_popup->setGeometry(rect);
+    if (QGraphicsView* view = qobject_cast<QGraphicsView*>(client->ownerWidget())) {
+        if (!m_proxy) {
+            m_proxy = new QGraphicsProxyWidget;
+            m_proxy->setWidget(m_popup);
+            view->scene()->addItem(m_proxy);
+        } else
+            m_proxy->setVisible(true);
+        m_proxy->setGeometry(rect);
+    } else {
+        m_popup->setParent(client->ownerWidget());
+        m_popup->setGeometry(rect);
+    }
+
     m_popup->setCurrentIndex(index);
     m_popup->exec();
 }
